Fix:one qr code  card alignment

--- a/src/styles/qr-code/qr-code.scss
+++ b/src/styles/qr-code/qr-code.scss
@@ -14,7 +14,7 @@
   position: relative;
 }
 .qr-codes-container {
-  display: flex;
+  display: grid;
   flex-wrap: wrap;
   grid-template-columns: repeat(2, 1fr);
   gap: 17px;
@@ -24,7 +24,12 @@
   scrollbar-width: thin;
   -ms-overflow-style: none;
   scrollbar-width: none;
+
+  &.no-qr-codes {
+    display: flex;
+  }
 }
+
 .no-data-container {
   display: flex;
   align-items: center;
@@ -145,5 +150,6 @@
 .no-data-image {
   margin-bottom: 0.7rem;
   width: 55px;
+  // margin-left: 9rem;
   filter: brightness(0) invert(1);
 }
